--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,19 +3,18 @@
     <div class="col-md-12">
       <h1 class="text-center">Fullstack Test - Angular + NodeJs</h1>
       <h2>Instructions:</h2>
+      <h4>Backend job:</h4>
       <ol>
-        <li>You will work on the pages/recipes component</li>
-        <li>You can visualize your work on <a href="/recipes">this link</a></li>
-        <li>
-          The main goal is to feed a bootstrap table with data comming from the
-          api
-        </li>
         <li>
           Clone the api project with the command
           <b
             >git clone
             https://github.com/SamuelHFalci/fullstack-test-node.git</b
           >
+        </li>
+        <li>
+          Create a new branch with your name with the command
+          <b>git checkout -b your-name</b>
         </li>
         <li>
           Install the backend dependencies with <b>yarn</b> or
@@ -25,7 +24,6 @@
           Run the backend with the command <b>yarn start</b> or
           <b>npm run start</b>
         </li>
-        <h4>Backend job:</h4>
         <li>
           Notice that the DataTable perform a get request with query params to
           the backend api
@@ -37,7 +35,27 @@
         <li>
           Hint: There is a class for handling database stuff on the backend api
         </li>
-        <h4>Frontend job:</h4>
+      </ol>
+      <h4>Frontend job:</h4>
+      <ol>
+        <li>
+          Clone the project with the command
+          <b
+            >git clone
+            https://github.com/SamuelHFalci/fullstack-test-angular.git</b
+          >
+        </li>
+        <li>
+          Install the backend dependencies with <b>yarn</b> or
+          <b>npm i</b> command
+        </li>
+        <li>Run the frontend with the command <b>yarn ng serve</b></li>
+        <li>You will work on the pages/recipes component</li>
+        <li>You can visualize your work on <a href="/recipes">this link</a></li>
+        <li>
+          The main goal is to feed a bootstrap table with data comming from the
+          api
+        </li>
         <li>
           After retrieve the paginated data correctly from the backend make it
           possible to click on the recipe name and open a modal with the recipe
@@ -72,10 +90,6 @@
             </tbody>
           </table>
         </div>
-        <li>
-          Notice that the data is hardcoded on the example and the pagination is
-          being done just on the frontend side.
-        </li>
       </ol>
     </div>
   </div>
