--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -48,6 +48,8 @@
           Make it possible for click on the recipe url and open the url in a new
           browser tab
         </li>
+        <li>The table should look like the example below:</li>
+
         <div class="mt-5">
           <table
             datatable
@@ -72,10 +74,6 @@
             </tbody>
           </table>
         </div>
-        <li>
-          Notice that the data is hardcoded on the example and the pagination is
-          being done just on the frontend side.
-        </li>
       </ol>
     </div>
   </div>
