--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -66,6 +66,8 @@
           Make it possible for click on the recipe url and open the url in a new
           browser tab
         </li>
+        <li>The table should look like the example below:</li>
+
         <div class="mt-5">
           <table
             datatable
